msg.json, base style

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,10 @@
 #user-input input{
     width: 100%;
 }
+
+#msg-board {
+    border: 1px solid;
+    height: 20em;
+    width: 75%;
+    margin: auto;
+}
