--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,7 +32,9 @@
 #msg-board {
     border: 1px solid;
     height: 20em;
-    width: 75%;
+    max-width: 46em;
+    min-width: 23em;
+    width: 70%;
     margin: auto;
     overflow-y: scroll;
 }
@@ -41,10 +43,12 @@
 // Individual Messages
 .msg{
     margin: .75em 1em;
+    opacity: .65;
 }
 .msg p {
     display: inline;
 }
 .newMsg{
     text-align: right;
+    opacity: 1;
 }
