Added minimum dark theme option

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,3 +32,11 @@
 .newMsg{
     text-align: right;
 }
+
+
+// Dark Theme
+ .darkTheme {
+     background-color: #191d22;
+     color: white;
+     text-shadow: 1px 1px 1px lightgray;
+ }
