Added button colors i think..

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,4 +39,11 @@
      background-color: #191d22;
      color: white;
      text-shadow: 1px 1px 1px lightgray;
+     button {
+         background: 
+     }
+     
  }
+
+
+
