--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,6 @@
     width: 100%;
     /* overflow: hidden; */
     padding: 0em;
-    background-color: white;
 }
 .nav ul {
     display: flex;
@@ -57,10 +56,7 @@
  .darkTheme {
      background-color: #191d22;
      color: white;
-     text-shadow: 1px 1px 1px lightgray;
-     button {
-         background: 
-     }
+     text-shadow: .5px .5px .5px white;
      
  }
 
