--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,8 @@
     position: fixed;
     top: 0;
     width: 100%;
-    /* overflow: hidden; */
+    background-color: white;
+    z-index: 3;
     padding: 0em;
 }
 .nav ul {
@@ -32,10 +33,10 @@
 // Message Board
 #msg-board {
     border: 1px solid;
-    height: 20em;
+    height: 25em;
     max-width: 46em;
     min-width: 23em;
-    width: 70%;
+    width: 60%;
     margin: auto;
     overflow-y: scroll;
 }
@@ -66,5 +67,13 @@
 .gecko {
     height: 4.25em;
     width: 3.25em;
+}
+
+
+// Media Queries
+@media (max-width: 960px){
+    #msg-board {
+        width: 70%;
+    }
 }
 
