time stamp added

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -83,6 +83,13 @@ h3 {
      opacity: 1;
 }
 
+.time {
+    display: inline-block;
+    font-size: .2em;
+    line-height: 0;
+    letter-spacing: .02em;
+}
+
 
 // Dark Theme
  .darkTheme {
