--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,8 +39,9 @@ body {
 #clearBtn {
     font-family: 'Bevan', cursive;
     letter-spacing: .2em;
-    border-radius: 1em;
-    background: linear-gradient(to top left, rgb(211, 209, 209), rgba(211, 209, 209, .5))
+    border-radius: .6em;
+    background: linear-gradient(to top left, rgb(211, 209, 209), rgb(255, 244, 244));
+    box-shadow: 0 0 2px rgb(20, 19, 19), .5px .5px 8px white;
 }
 
 // Main Content under Nav
