--- a/sass/main.scss
+++ b/sass/main.scss
@@ -128,6 +128,17 @@ h3 {
     margin-left: .5em;
 }
 
+//edit styles
+textarea {
+    font-family: 'Amatic SC', cursive;
+    font-size: .9em;
+    width: 14em;
+    height: auto;
+    border-radius: .6em;
+    outline: none;
+    background: rgb(237, 244, 255);
+}
+
 
 
 
